# Trifonko-Vyacheslav

./: CMakeLists.txt  README.md  cproject.pro  sonar-project.properties
.github/workflows/: build.yml
src/: Account.cpp  AccountManager.cpp  Activation.h  Admin.cpp  AdminWindow.cpp  AllPlaceInfoWindow.cpp  Crud.h  Functions.cpp  Functions.h  InputValidationException.cpp  LimitedSubscription.cpp  LoginWindow.cpp  MainMenuWindow.cpp  MainWindow.cpp  Place.cpp  PlaceInfoWindow.cpp  RegistrationWindow.cpp  Subscription.cpp  Subscription.h  UnlimitedSubscription.cpp  User.cpp  main.cpp  subscription.cpp  subscription.h
src/headers/: Account.h  AccountManager.h  Activation.h  Admin.cpp  Admin.h  AdminWindow.h  AllPlaceInfoWindow.h  Functions.h  InputValidationException.h  LimitedSubscription.h  LoginWindow.h  MainMenuWindow.h  MainWindow.h  Place.h  PlaceInfoWindow.h  RegistrationWindow.h  Subscription.h  SubscriptionList.h  UnlimitedSubscription.h  User.h
src/windows/: AdminWindow.ui  AllPlaceInfoWindow.ui  LoginWindow.ui  MainMenuWindow.ui  MainWindow.ui  PlaceInfoWindow.ui  RegistrationWindow.ui
